# gpt-rust

./: Cargo.toml
src/: main.rs
