[package]
name = "gpt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.18", features = ["full"]}
hyper-tls = "0.5.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
spinners = "3.1.0"
tracing = "0.1.33"
tracing-subscriber = "0.3"
clap = { version = "3.1.8", features = ["derive"] }
rustyline = "9.1.2"
colored = "2.0.0"
